# Model-Serving-System

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.scheduler  README.md  add_replica.py  deploy-controller-aws.sh  deploy-controller-gcp.sh  deploy_prometheus_vm_aws.sh  dummy.py  dummy_scheduler.py  dummy_server.py  future_manager.py  headnode_service_pb2.py  headnode_service_pb2.pyi  headstore_client.py  model_configs.json  replica_add.py  requirements.txt  scheduler.py  simple_test_head.py  testing.txt  unused.py  worker-service.proto  worker_service_pb2.py  worker_service_pb2.pyi  worker_service_pb2_grpc.py
C++-code/: client  client.cc  commands.txt  headnode-service.grpc.pb.cc  headnode-service.grpc.pb.h  headnode-service.pb.cc  headnode-service.pb.h  raylet-rpc-worker-demo.cpp  server  server.cc  worker-service.grpc.pb.cc  worker-service.grpc.pb.h  worker-service.pb.cc  worker-service.pb.h
docker/: Dockerfile.head  Dockerfile.prometheus  Dockerfile.scheduler
docs/: Running.md
infra/: aws_firewalls.yaml  docker-compose.yaml  gcp_firewalls.yaml  prometheus.yml
requirements/: requirements-controller.txt  requirements-scheduler.txt
scripts/: compile_protos.sh  fix_protobuf_imports.py
scripts/aws_scripts/: build-aws-controller.sh  build-aws-scheduler.sh  build-prometheus.sh
scripts/deploy/aws/: deploy-controller-aws.sh  deploy_prometheus_vm_aws.sh
src/components/: add_replica.py  add_replica_vllm.py  replica_server.cc  scheduler.py
src/components/headNode/: head_controller.py  http_proxy.cpp  http_proxy.h  http_proxy.py  httpproxy.py  proxy_manager.py
src/lib/: __init__.py  autoscale_manager.py  configurations.py  deployment_handle.cpp  deployment_handle.h  deployment_handle.py  deployment_manager.py  deployment_scheduler.py  headstore_client.py  health_manager.py  helpers.py  logging_config.py  model_config.py  node_info.py  proxy_manager.py  replica.py  utils.py
src/lib/cloud_vm/: __init__.py  aws_vm_manager.py  vm_config.py  vm_config_aws.py  vm_manager.py
src/protos/: common.proto  headnode-service.proto  proxy-service.proto  replica_api.proto  replica_service.proto  worker-service.proto
tests/: burst_locust_test.py  simple_test_head.py  test_a100_200_concurrent.py
